Bug 1784187 - Process scripts even if they contain no text content. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D156086